<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <ImageView
        android:id="@+id/displayPic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="52dp"
        android:onClick="selectDisplayPic"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameR_editText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_username"
        android:drawablePadding="8dp"
        android:hint="@string/username_hint"
        android:padding="7dp"

        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_selectpp" />

    <EditText
        android:id="@+id/passwordR_editText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:padding="7dp"
        android:textColor="@android:color/white"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameR_editText" />

    <EditText
        android:id="@+id/rePasswordR_editText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="confirm password"
        android:inputType="textPassword"

        android:padding="7dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordR_editText" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_save"
        android:onClick="Register"
        android:text="@string/register"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_editText" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimary"
        android:drawablePadding="8dp"
        android:hint="Enter name here"
        android:inputType="text|textCapWords"
        android:padding="7dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rePasswordR_editText" />

    <EditText
        android:id="@+id/weight_editText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimary"
        android:drawablePadding="8dp"
        android:hint="Enter weight in kg"
        android:inputType="number"
        android:padding="7dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_editText" />

    <EditText
        android:id="@+id/height_editText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimary"
        android:drawablePadding="8dp"
        android:hint="Enter height in cm"
        android:inputType="number"
        android:padding="7dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_editText" />

    <EditText
        android:id="@+id/goal_editText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimary"
        android:drawablePadding="8dp"
        android:hint="Enter goal here"
        android:inputType="text|textCapSentences"
        android:padding="7dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_editText" />

    <TextView
        android:id="@+id/textview_selectpp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select profile picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayPic" />


</androidx.constraintlayout.widget.ConstraintLayout>